# synthsoma2

./: .gitignore  .gitmodules  CMakeLists.txt  DESIGN  README  TODO  synthsoma-2.0.pc.in
CMake/: FindPythonLibrary.cmake  README
benchmark/: CMakeLists.txt  asioudp.cc  async_udp_server.cc  benchtest.py  blocking_udp.cc  eventbus.cc  eventrouter.cc  pipeserver.cc  simplesynthsoma.cc
debian/: changelog  control  copyright
install/lib/python/pysynthsoma2/: __init__.py
pysynthsoma2/: CMakeLists.txt  default.py  pysynthsoma2.cc  test_basics.py  test_datatypes.py  test_default.py  test_dspboard.py  test_eventserver.py  tspiketest.py
soma_apps/pysynthsoma2/: CMakeLists.txt
somasynth/: CMakeLists.txt  README  embedding_in_gtk.py  soma-synth  test.py  testgui.glade
src/: CMakeLists.txt  sslogging.h  types.h
synthsoma2/: CMakeLists.txt  asioutil.cc  asioutil.h  databuffer.cc  databuffer.h  databus.cc  databus.h  datadevice.h  datasequenceproto.cc  datasequenceproto.h  eventbus.cc  eventbus.h  eventdevice.h  eventrouter.cc  eventrouter.h  netdatasender.cc  netdatasender.h  netdataserver.cc  netdataserver.h  neteventreceiver.cc  neteventreceiver.h  neteventsender.cc  neteventsender.h  neteventserver.cc  neteventserver.h  pysynthsoma2.cc  sslogging.cc  sslogging.h  syntheticsoma.cc  syntheticsoma.h  synthsoma2.py  test_basics.py  test_databus.py  testutil.cc  testutil.h  tspiketest.py  tsretxbuffer.h  types.h
synthsoma2/devices/: CMakeLists.txt  audiodevice.cc  audiodevice.h  dspboard.cc  dspboard.h  pydevices.cc  simpletspike.cc  simpletspike.h  test_audio.py  testdevice.cc  testdevice.h  timer.cc  timer.h
tests/: CMakeLists.txt  databus_test.cc  datasequenceproto_test.cc  eventbus_test.cc  eventrouter_test.cc  netdatasender_test.cc  neteventreceiver_test.cc  neteventsender_test.cc  runtest.cc  simple_test.cc  simpletspike_test.cc  testutil.cc  testutil.h  tsretxbuffer_test.cc
