
set(somasynth_PY
  soma-synth
)

set(SOMA_SYNTH_SHARE_DIR "${CMAKE_INSTALL_PREFIX}/share/soma-synth2/")
  

INSTALL(FILES ${somasynth_PY} DESTINATION ${SOMA_SYNTH_SHARE_DIR} PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)


INSTALL(CODE "execute_process(COMMAND ${CMAKE_COMMAND} -E create_symlink ${SOMA_SYNTH_SHARE_DIR}soma-synth ${CMAKE_INSTALL_PREFIX}/bin/soma-synth)")


